fix: order controller test to match flow